@@ -17,6 +17,7 @@
 	<li><a href="#perltidy_change_log">Perltidy Change Log</a></li>
 	<ul>
 
+		<li><a href="#2007_05_04">2007 05 04</a></li>
 		<li><a href="#2007_04_24">2007 04 24</a></li>
 		<li><a href="#2006_07_19">2006 07 19</a></li>
 		<li><a href="#2006_06_14">2006 06 14</a></li>
@@ -54,6 +55,13 @@
 <p>
 </p>
 <h1><a name="perltidy_change_log">Perltidy Change Log</a></h1>
+<p>
+</p>
+<h2><a name="2007_05_04">2007 05 04</a></h2>
+<pre>
+ -Fixed problem where an extra blank line was added after an =cut when either
+ (a) the =cut started (not stopped) a POD section, or (b) -mbl &gt; 1. 
+ Thanks to J. Robert Ray and Bill Moseley.</pre>
 <p>
 </p>
 <h2><a name="2007_04_24">2007 04 24</a></h2>
