@@ -2340,7 +2340,7 @@ SEE ALSO
     perlstyle(1), Perl::Tidy(3)
 
 VERSION
-    This man page documents perltidy version 20070424.
+    This man page documents perltidy version 20070504.
 
 CREDITS
     Michael Cartmell supplied code for adaptation to VMS and helped with
