@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>The Perltidy Home Page</title>
-  <META name="GENERATOR" CONTENT="alconv $Revision: 1.28 $">
+  <META name="GENERATOR" CONTENT="alconv $Revision: 1.29 $">
   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
 </head>
 <body bgcolor="#A0E0E0">
@@ -93,11 +93,11 @@ tested on Unix, Windows, VMS and MacPerl.
 <p /></div>
 <li>Please check the <a href="README.html">README File</a>
 <li>Please check the <a href="INSTALL.html">Installation Notes</a>
-<li>Download <a href="http://prdownloads.sourceforge.net/perltidy/Perl-Tidy-20070424.tar.gz">
+<li>Download <a href="http://prdownloads.sourceforge.net/perltidy/Perl-Tidy-20070504.tar.gz">
 The latest release (.tgz, Unix-style line endings)</a>
-<li>Download <a href="http://prdownloads.sourceforge.net/perltidy/Perl-Tidy-20070424.zip">
+<li>Download <a href="http://prdownloads.sourceforge.net/perltidy/Perl-Tidy-20070504.zip">
 The latest release (.zip, Windows-style line endings)</a>
-<li>Download <a href="http://prdownloads.sourceforge.net/perltidy/perltidy_20070424-1_all.deb">
+<li>Download <a href="http://prdownloads.sourceforge.net/perltidy/perltidy_20070504-1_all.deb">
 The latest release as a .deb Debian Linux package</a>
 <li>Debian users can also use: apt-get install perltidy
 <li>Download <a href= "http://rpmfind.net/" > rpm's from Rpmfind.Net</a>
